# stock-data-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi.yaml
stock_data_mcp/: __init__.py  server.py
